# ocr-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dots-ocr-cpu  Dockerfile.dots-ocr-hf-cpu  README.md  README_DOTS_CPU.md  Report.md  docker-compose.dev.yml  docker-compose.dots-ocr-cpu.yml  docker-compose.yml  download-model.sh  manage.py  pyproject.toml  pytest.ini  setup-dots-ocr.sh
apps/: main.py
apps/core/: cli.py
apps/core/routers/: health.py
apps/metrics/: __init__.py  base.py  middleware.py  routers.py
apps/ocr/: __init__.py  routers.py  schemas.py  service.py  utils.py
conf/: enhanced_logging.py  logging.py  settings.py
docs/: dots-ocr-cpu.md
examples/: test_api.py
scripts/: dots_ocr_cpu_server.py  entrypoint.sh  init.sql  mock-dots-ocr.conf
tests/: __init__.py  conftest.py  test_health.py  test_ocr.py
