[project]
name = "aip-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "MohmdFo",email = "mohammad.fotouhi80@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "typer (>=0.15.2,<0.16.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi-pagination (>=0.12.34,<0.13.0)",
    "fastapi-versioning (>=0.10.0,<0.11.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pillow = "^11.3.0"

