[tool.poetry]
name = "aip-ocr"
version = "0.1.0"
description = "AI-powered OCR service"
authors = ["MohmdFo <mohammad.fotouhi80@gmail.com>"]
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.115.12"
typer = "^0.15.2"
pyjwt = "^2.10.1"
redis = "^5.2.1"
cryptography = "^44.0.2"
sqlalchemy = "^2.0.40"
uvicorn = "^0.34.0"
fastapi-pagination = "^0.12.34"
fastapi-versioning = "^0.10.0"
loguru = "^0.7.3"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
prometheus-client = "^0.22.1"
httpx = "^0.28.1"
pydantic-settings = "^2.10.1"
bcrypt = "^4.3.0"
asyncpg = "^0.30.0"
email-validator = "^2.3.0"
greenlet = "^3.2.4"
python-multipart = "^0.0.20"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pillow = "^11.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

